// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes default visibility 1`] = `
<ChangeDefaultVisibilityForm
  defaultVisibility="public"
  onClose={[Function]}
  onConfirm={[MockFunction]}
/>
`;

exports[`renders: default 1`] = `
<header
  className="page-header"
>
  <h1
    className="page-title"
  >
    projects_management
  </h1>
  <div
    className="page-actions"
  >
    <span
      className="big-spacer-right"
    >
      <span
        className="text-middle"
      >
        settings.projects.default_visibility_of_new_projects
         
        <strong>
          visibility.public
        </strong>
      </span>
      <EditButton
        className="js-change-visibility spacer-left button-small"
        onClick={[Function]}
      />
    </span>
    <Button
      id="create-project"
      onClick={[MockFunction]}
    >
      qualifiers.create.TRK
    </Button>
  </div>
  <p
    className="page-description"
  >
    projects_management.page.description
  </p>
</header>
`;

exports[`renders: undefined visibility 1`] = `
<header
  className="page-header"
>
  <h1
    className="page-title"
  >
    projects_management
  </h1>
  <div
    className="page-actions"
  >
    <span
      className="big-spacer-right"
    >
      <span
        className="text-middle"
      >
        settings.projects.default_visibility_of_new_projects
         
        <strong>
          —
        </strong>
      </span>
      <EditButton
        className="js-change-visibility spacer-left button-small"
        onClick={[Function]}
      />
    </span>
    <Button
      id="create-project"
      onClick={[MockFunction]}
    >
      qualifiers.create.TRK
    </Button>
  </div>
  <p
    className="page-description"
  >
    projects_management.page.description
  </p>
</header>
`;
